# slopless

./: .gitignore  handpicked-blocklist.txt  handpicked-fakenews.txt  handpicked-safelist.txt  readme.md  startpage.html
crawler/: CLAUDE.md  Cargo.toml  build.rs
crawler/src/: bloom.rs  lol_readability.rs  lol_readability_tests.rs  main.rs  main_tests.rs  robots.rs
get_domains/: longform.txt  ooh.txt  scrape-all.sh  scrape-anchor-tags.sh  scrape-json.sh  scrape-md.sh  scrape-txt-dirty.sh  scrape-wiby.sh  scrape_subreddit.sh
scrapers/: ooh.txt  recurse_crawl.py  scrape-all.sh  scrape-anchor-tags.sh  scrape-smallweb.sh  wikipedia-perennial.txt
server/: Cargo.toml
server/src/: index.html  main.rs
