[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lol_html = "2.7.0"
tantivy = "0.25.0"
url = "2.4"
anyhow = "1.0"
regex = "1"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
unicode-normalization = "0.1.25"
spider = { version = "2", features = ["sync"] }
html-escape = "0.2"

[profile.release]
debug = true # Adds debug symbols to the optimized binary
